# MathModeling

./: .gitignore  README.md
lab_01/: CMakeLists.txt  lab_01.lisp
lab_01/cxx/: CMakeLists.txt  README.md
lab_01/cxx/inc/: APicard.h  EulerMethod.h  FFT.h  Picard.h
lab_01/cxx/src/: EulerMethod.cc  FFT.cc  FFTPicard.cc  MTPicard.cc  Picard.cc  main.cc
lab_01/inc/: Monomial.h  Node.hxx
lab_01/lisp/: lab_01.lisp
lab_01/python/: requirements.txt
lab_01/python/src/: solve.py
lab_01/report/: 01-title.tex  10-intro.tex  11-theory.tex  12-practical.tex  report.tex
lab_01/src/: Monomial.cc  Polynomial.cc  main.cc
lab_01/trash/cxx/: CMakeLists.txt
lab_01/trash/cxx/inc/: Monomial.h  Polynomial.h
lab_01/trash/cxx/src/: PicardMethod.cc
lab_02/report/: 00-preamble.tex  01-title.tex  10-intro.tex  11-theory.tex  13-answers.tex  test.tex
lab_02/report/plots/: plot01.tex  plot02.tex  plot03.tex  plot04.tex
lab_03/report/: 10-intro.tex  12-practical.tex  13-answers.tex
lab_03/report/plots/: plot04.tex
lab_04/report/: 01-title.tex  10-intro.tex  11-theory.tex  12-practical.tex  13-answers.tex  report.tex
lab_04/report/plots/: plot01.tex  plot_lab_04.tex
report-template/: 01-title.tex
sem_01/lab_01/cxx/: README.md
sem_01/lab_01/python/: requirements.txt
sem_01/lab_02/report/: 12-practical.tex
sem_01/lab_03/report/: 01-title.tex  11-theory.tex
sem_01/lab_04/report/: 13-answers.tex  14-additional.tex  report.tex
sem_02/lab_01/: myrnd.py  run.py
sem_02/lab_01/report/: 00-preamble.tex  01-title.tex  (+1 more)
sem_02/lab_02/: run.py
sem_02/lab_06/: run.py
(+45 files in other folders)
